--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,6 +134,24 @@ canvas {
   margin: 0;
 }
 
+/* SCORE Box */
+
+.container > span {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+
+  padding: 0;
+  margin: 0;
+}
+
+.container > span > p {
+  padding: 0;
+  margin: 0 0 0 auto;
+}
+
 .buttons {
   width: 100%;
   height: 4rem;
