--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,6 +134,28 @@ canvas {
   margin: 0;
 }
 
+/* SCORE Box */
+
+.container > span {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+
+  padding: 0;
+  margin: 0;
+}
+
+.container > span > p {
+  padding: 0;
+  margin: 0 0 0 auto;
+}
+
+/* FOOTER */
+
+/* Others */
+
 .buttons {
   width: 100%;
   height: 4rem;
@@ -144,6 +166,7 @@ canvas {
   align-items: center;
 
   margin-top: auto;
+  margin-bottom: 0.4rem;
 }
 
 .buttons > button {
@@ -160,19 +183,23 @@ canvas {
   margin: 1rem;
 
   transition: 0.2s;
+
+  opacity: 0.7;
 }
 
 .buttons > button:hover {
   transition: 0.2s;
+  opacity: 1;
 }
 
 .buttons > button:active {
   transform: translateY(2px);
   box-shadow: 0px 0px #0005;
   transition: 0.2s;
+  opacity: 0.2;
 }
 
-.save,
+/* .save,
 .start {
   background-color: lightgreen;
 }
@@ -188,4 +215,4 @@ canvas {
 
 .restart:hover {
   background-color: rgb(180, 234, 216);
-}
+} */
