--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -152,9 +152,92 @@ canvas {
   margin: 0 0 0 auto;
 }
 
+/* TIMER Box */
+
+.clocks {
+  width: 100%;
+  height: 60%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.clocks > .clock {
+  width: 40%;
+  height: 80%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  border: 0.4px solid #0002;
+  border-radius: 1rem;
+
+  margin: 1rem;
+}
+
+.clocks > .clock > .clock-button {
+  width: 100%;
+  height: 33%;
+  background-color: lightcyan;
+  border: 0;
+
+  font-size: 2rem;
+  box-shadow: 0px 3px #0004;
+
+  transition: 0.2s;
+  opacity: 0.7;
+  z-index: 999;
+}
+
+.clocks > .clock > .clock-button:hover {
+  transition: 0.2s;
+  opacity: 1;
+}
+
+.clocks > .clock > .clock-button:active {
+  transform: translateY(2px);
+  box-shadow: 0px 0px #0005;
+  transition: 0.2s;
+  opacity: 0.2;
+}
+
+.up {
+  border-radius: 1rem 1rem 0 0;
+}
+
+.down {
+  border-radius: 0 0 1rem 1rem;
+}
+
+.clocks > .clock > .time {
+  width: 100%;
+  height: 4rem;
+
+  background: white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  font-size: 3.6rem;
+  border: 0.4px solid #0002;
+}
+
+.note {
+  color: gray;
+  font-style: italic;
+  margin: 0 0 0.4rem 0;
+  padding: 0;
+}
+
 /* FOOTER */
 
-/* Others */
+/* Buttons */
 
 .buttons {
   width: 100%;
@@ -199,23 +282,10 @@ canvas {
   opacity: 0.2;
 }
 
-/* .save,
-.start {
+#restart,
+#start-timer {
   background-color: lightgreen;
 }
-
-.save:hover,
-.start:hover {
-  background-color: rgb(187, 234, 187);
-}
-
-.restart {
-  background-color: aquamarine;
-}
-
-.restart:hover {
-  background-color: rgb(180, 234, 216);
-} */
 
 /* ELEMENTS */
 hr {
