--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,9 @@
+// Imports
+@import "variables";
+@import "buttons";
+@import "divider";
+
+// Fonts
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
@@ -11,7 +17,8 @@ body {
 }
 
 body {
-  background-color: bisque;
+  background-color: $background;
+
   padding-top: 5vh;
   display: flex;
   align-items: center;
@@ -32,16 +39,27 @@ header {
   flex-direction: column;
 }
 
+// Desktop
 .wrapper {
-  width: 90vw;
-  height: 80vh;
-
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-
   margin-top: 2rem;
+
+  // Desktop
+  @media screen and (min-width: 900px) {
+    flex-direction: row;
+    width: 90vw;
+    height: 80vh;
+  }
+
+  // Mobile
+  @media screen and (max-width: 900px) {
+    width: 96vw;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding-bottom: 10rem;
+  }
 }
 
 .container {
@@ -64,7 +82,7 @@ header {
 }
 
 .container > h1 {
-  background: rgb(6, 114, 114);
+  background: $primary-color;
   color: white;
 
   width: 100%;
@@ -85,17 +103,22 @@ header {
 /* GAME BOARD */
 
 .main {
-  width: 60%;
+  // Desktop
+  @media screen and (min-width: 900px) {
+    width: 60%;
+  }
+
+  // Mobile
+  @media screen and (max-width: 900px) {
+    width: 100%;
+  }
 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
 
-#chess {
   padding: 0.6rem;
-  margin: 0;
 }
 
 canvas {
@@ -106,8 +129,17 @@ canvas {
   justify-content: center;
   flex-direction: column;
 
-  padding: 1rem;
   border-radius: 0.2rem;
+
+  // Desktop
+  @media screen and (min-width: 900px) {
+    padding: 1rem;
+  }
+
+  // Mobile
+  @media screen and (max-width: 900px) {
+    padding: 0.6rem;
+  }
 
   margin-top: auto;
   margin-bottom: auto;
@@ -115,7 +147,15 @@ canvas {
 
 /* ASIDE PANEL */
 .aside {
-  width: 35%;
+  // Desktop
+  @media screen and (min-width: 900px) {
+    width: 35%;
+  }
+
+  // Mobile
+  @media screen and (max-width: 900px) {
+    width: 100%;
+  }
   height: 100%;
 
   display: flex;
@@ -228,6 +268,11 @@ canvas {
   border: 0.4px solid #0002;
 }
 
+#restart,
+#start-timer {
+  background-color: lightgreen;
+}
+
 .note {
   color: gray;
   font-style: italic;
@@ -236,79 +281,3 @@ canvas {
 }
 
 /* FOOTER */
-
-/* Buttons */
-
-.buttons {
-  width: 100%;
-  height: 4rem;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  margin-top: auto;
-  margin-bottom: 0.4rem;
-}
-
-.buttons > button {
-  flex: auto;
-  height: 80%;
-
-  font-size: large;
-  box-shadow: 0px 2px #0005;
-
-  border: 0;
-  border-radius: 0.4rem;
-
-  padding: 0;
-  margin: 1rem;
-
-  transition: 0.2s;
-
-  opacity: 0.7;
-}
-
-.buttons > button:hover {
-  transition: 0.2s;
-  opacity: 1;
-}
-
-.buttons > button:active {
-  transform: translateY(2px);
-  box-shadow: 0px 0px #0005;
-  transition: 0.2s;
-  opacity: 0.2;
-}
-
-#restart,
-#start-timer {
-  background-color: lightgreen;
-}
-
-/* ELEMENTS */
-hr {
-  width: 90%;
-}
-
-/* Dashed border */
-hr.dashed {
-  border-top: 2px dashed #bbb;
-}
-
-/* Dotted border */
-hr.dotted {
-  border-top: 2px dotted #bbb;
-}
-
-/* Solid border */
-hr.solid {
-  border-top: 2px solid #bbb;
-}
-
-/* Rounded border */
-hr.rounded {
-  border-top: 2px solid #bbb;
-  border-radius: 6px;
-}
