--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,11 +19,15 @@ body {
 body {
   background-color: $background;
 
-  padding-top: 5vh;
+  width: 100vw;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
+
+  padding: 5vh 0 0 0;
+  overflow-x: hidden;
 }
 
 header {
@@ -44,21 +48,25 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 2rem;
+
+  margin: 2rem 0 0 0;
+
+  overflow-x: hidden;
 
   // Desktop
   @media screen and (min-width: 900px) {
+    width: 90%;
     flex-direction: row;
-    width: 90vw;
-    height: 80vh;
+    overflow-y: visible;
+    padding: 0;
   }
 
   // Mobile
   @media screen and (max-width: 900px) {
-    width: 96vw;
+    width: 96%;
     flex-direction: column;
     overflow-y: scroll;
-    padding-bottom: 10rem;
+    padding: 0 0 10rem;
   }
 }
 
@@ -156,6 +164,7 @@ canvas {
   @media screen and (max-width: 900px) {
     width: 100%;
   }
+
   height: 100%;
 
   display: flex;
@@ -166,6 +175,7 @@ canvas {
 
 .aside > .panel {
   width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0 0 1rem 0;
 }
@@ -281,3 +291,39 @@ canvas {
 }
 
 /* FOOTER */
+footer {
+  background: #fff5;
+
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+
+  padding: 0;
+  margin: 2rem 0 0 0;
+}
+
+footer > div > h3 {
+  margin: 1rem 0 0.2rem 0;
+}
+
+.left {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  margin: 0 0 1rem 1rem;
+  padding: 0;
+}
+
+.right {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+
+  margin: 0 1rem 1rem 0;
+  padding: 0;
+}
