--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,329 +1,393 @@
 // Imports
-@import "variables";
-@import "buttons";
-@import "divider";
+@import 'variables';
+@import 'buttons';
+@import 'divider';
 
 // Fonts
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-  font-family: "Roboto", sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  background-color: $background;
+	background-color: $background;
 
-  width: 100vw;
+	width: 100vw;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
-  padding: 5vh 0 0 0;
-  overflow-x: hidden;
+	padding: 5vh 0 0 0;
+	overflow-x: hidden;
 }
 
 header {
-  position: absolute;
-  top: 0;
+	position: absolute;
+	top: 0;
 
-  width: 100vw;
-  height: 4rem;
+	width: 100vw;
+	height: 4rem;
 
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	flex-direction: column;
 }
 
 // Desktop
 .wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-  margin: 2rem 0 0 0;
+	margin: 2rem 0 0 0;
 
-  overflow-x: hidden;
+	overflow-x: hidden;
 
-  // Desktop
-  @media screen and (min-width: 900px) {
-    width: 90%;
-    flex-direction: row;
-    overflow-y: visible;
-    padding: 0;
-  }
+	// Desktop
+	@media screen and (min-width: 900px) {
+		width: 90%;
+		flex-direction: row;
+		overflow-y: visible;
+		padding: 0;
+	}
 
-  // Mobile
-  @media screen and (max-width: 900px) {
-    width: 96%;
-    flex-direction: column;
-    overflow-y: scroll;
-    padding: 0 0 10rem;
-  }
+	// Mobile
+	@media screen and (max-width: 900px) {
+		width: 96%;
+		flex-direction: column;
+		overflow-y: scroll;
+		padding: 0 0 10rem;
+	}
 }
 
 .container {
-  background: white;
-  height: 100%;
+	background: white;
+	height: 100%;
 
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	flex-direction: column;
 
-  padding: 0 0 0.2rem 0;
-  margin: 1rem;
+	padding: 0 0 0.2rem 0;
+	margin: 1rem;
 
-  border-radius: 0.4rem;
-  border: 0.5px solid #0005;
-  box-shadow: 5px 5px #0002;
+	border-radius: 0.4rem;
+	border: 0.5px solid #0005;
+	box-shadow: 5px 5px #0002;
 
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .container > h1 {
-  background: $primary-color;
-  color: white;
+	background: $primary-color;
+	color: white;
 
-  width: 100%;
-  height: 2.4rem;
+	width: 100%;
+	height: 2.4rem;
 
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
-  padding: 0;
-  border-radius: 0.4rem 0.4rem 0 0;
-  margin: 0 0 1rem 0;
+	padding: 0;
+	border-radius: 0.4rem 0.4rem 0 0;
+	margin: 0 0 1rem 0;
 }
 
 /* GAME BOARD */
 
 .main {
-  // Desktop
-  @media screen and (min-width: 900px) {
-    width: 60%;
-  }
+	// Desktop
+	@media screen and (min-width: 900px) {
+		width: 60%;
+	}
 
-  // Mobile
-  @media screen and (max-width: 900px) {
-    width: 100%;
-  }
+	// Mobile
+	@media screen and (max-width: 900px) {
+		width: 100%;
+	}
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 
-  padding: 0.6rem;
+	padding: 0.6rem;
 }
 
 canvas {
-  background: black;
+	background: black;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
-  border-radius: 0.2rem;
+	border-radius: 0.2rem;
 
-  // Desktop
-  @media screen and (min-width: 900px) {
-    padding: 1rem;
-  }
+	// Desktop
+	@media screen and (min-width: 900px) {
+		padding: 1rem;
+	}
 
-  // Mobile
-  @media screen and (max-width: 900px) {
-    padding: 0.6rem;
-  }
+	// Mobile
+	@media screen and (max-width: 900px) {
+		padding: 0.6rem;
+	}
 
-  margin-top: auto;
-  margin-bottom: auto;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 /* ASIDE PANEL */
 .aside {
-  // Desktop
-  @media screen and (min-width: 900px) {
-    width: 35%;
-  }
+	// Desktop
+	@media screen and (min-width: 900px) {
+		width: 35%;
+	}
 
-  // Mobile
-  @media screen and (max-width: 900px) {
-    width: 100%;
-  }
+	// Mobile
+	@media screen and (max-width: 900px) {
+		width: 100%;
+	}
 
-  height: 100%;
+	height: 100%;
 
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-direction: column;
 }
 
 .aside > .panel {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0 0 1rem 0;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0 0 1rem 0;
 }
 
 .aside > .panel:last-child {
-  margin: 0;
+	margin: 0;
 }
 
 /* SCORE Box */
 
 .container > span {
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+	width: 90%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
 
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 .container > span > * {
-  padding: 0;
-  margin: 0 0 0 auto;
+	padding: 0;
+	margin: 0 0 0 auto;
+}
+
+.scores {
+	width: 90%;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+}
+
+.scores > .score {
+	width: 100%;
+	padding: 0.2rem;
+	margin: 0.2rem;
+
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+
+	border: 1px solid black;
+	border-radius: 0.2rem;
+}
+
+.scores > .white {
+	align-items: flex-start;
+}
+
+.scores > .black {
+	align-items: flex-end;
+}
+
+.scores > .score > .head {
+	width: 100%;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: row;
+}
+
+.scores > .score > .head > h4 {
+	padding: 0.2rem;
+	margin: 0;
+}
+
+.scores > .score > .pieces {
+	width: calc(100% - 0.8rem);
+	height: 1.2rem;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	padding: 0.4rem;
+	border-radius: 0.2rem;
+}
+
+#white-pieces {
+	justify-content: flex-start;
+	background-color: $white-color;
+}
+
+#black-pieces {
+	justify-content: flex-end;
+	background-color: $black-color;
 }
 
 /* TIMER Box */
 
 .clocks {
-  width: 100%;
-  height: 60%;
+	width: 100%;
+	height: 60%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
 }
 
 .clocks > .clock {
-  width: 40%;
-  height: 80%;
+	width: 40%;
+	height: 80%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 
-  border: 0.4px solid #0002;
-  border-radius: 1rem;
+	border: 0.4px solid #0002;
+	border-radius: 1rem;
 
-  margin: 1rem;
+	margin: 1rem;
 }
 
 .clocks > .clock > .clock-button {
-  width: 100%;
-  height: 33%;
-  background-color: lightcyan;
-  border: 0;
+	width: 100%;
+	height: 33%;
+	background-color: lightcyan;
+	border: 0;
 
-  font-size: 2rem;
-  box-shadow: 0px 3px #0004;
+	font-size: 2rem;
+	box-shadow: 0px 3px #0004;
 
-  transition: 0.2s;
-  opacity: 0.7;
-  z-index: 999;
+	transition: 0.2s;
+	opacity: 0.7;
+	z-index: 999;
 }
 
 .clocks > .clock > .clock-button:hover {
-  transition: 0.2s;
-  opacity: 1;
+	transition: 0.2s;
+	opacity: 1;
 }
 
 .clocks > .clock > .clock-button:active {
-  transform: translateY(2px);
-  box-shadow: 0px 0px #0005;
-  transition: 0.2s;
-  opacity: 0.2;
+	transform: translateY(2px);
+	box-shadow: 0px 0px #0005;
+	transition: 0.2s;
+	opacity: 0.2;
 }
 
 .up {
-  border-radius: 1rem 1rem 0 0;
+	border-radius: 1rem 1rem 0 0;
 }
 
 .down {
-  border-radius: 0 0 1rem 1rem;
+	border-radius: 0 0 1rem 1rem;
 }
 
 .clocks > .clock > .time {
-  width: 100%;
-  height: 4rem;
+	width: 100%;
+	height: 4rem;
 
-  background: white;
+	background: white;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 
-  font-size: 3.6rem;
-  border: 0.4px solid #0002;
+	font-size: 3.6rem;
+	border: 0.4px solid #0002;
 }
 
 #restart,
 #start-timer {
-  background-color: lightgreen;
+	background-color: lightgreen;
 }
 
 .note {
-  color: gray;
-  font-style: italic;
-  margin: 0 0 0.4rem 0;
-  padding: 0;
+	color: gray;
+	font-style: italic;
+	margin: 0 0 0.4rem 0;
+	padding: 0;
 }
 
 /* FOOTER */
 footer {
-  background: #fff5;
+	background: #fff5;
 
-  width: 100%;
+	width: 100%;
 
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
 
-  padding: 0;
-  margin: 2rem 0 0 0;
+	padding: 0;
+	margin: 2rem 0 0 0;
 }
 
 footer > div > h3 {
-  margin: 1rem 0 0.2rem 0;
+	margin: 1rem 0 0.2rem 0;
 }
 
 .left {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  margin: 0 0 1rem 1rem;
-  padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-direction: column;
+	margin: 0 0 1rem 1rem;
+	padding: 0;
 }
 
 .right {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	flex-direction: column;
 
-  margin: 0 1rem 1rem 0;
-  padding: 0;
+	margin: 0 1rem 1rem 0;
+	padding: 0;
 }
